[tool.poetry]
name = "repl_nix_pythonlearning"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^8.4.0"
python-ntlm = "^1.1.0"
importlib-metadata = "^4.12.0"
lockfile = "^0.12.2"
Brotli = "^1.0.9"
ordereddict = "^1.1"
Sphinx = "^5.1.1"
ipywidgets = "^8.0.1"
numpy = "^1.23.2"
heroes = "^1.0.2"
cryptography = "^37.0.4"
HTMLParser = "^0.0.2"
keyring = "^23.8.2"
zipp = "^3.8.1"
attr = "^0.3.2"
docutils = "^0.19"
toml = "^0.10.2"
Cython = "^0.29.32"
railroad = "^0.5.0"
tornado = "^6.2"
Jinja2 = "^3.1.2"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
